SE-15: Fix custom  field option column alignment on activity form panel

--- a/scss/civicrm/contact/pages/_new-activity.scss
+++ b/scss/civicrm/contact/pages/_new-activity.scss
@@ -196,6 +196,10 @@
       }
     }
   }
+
+  .crm-info-panel {
+    table-layout: fixed;
+  }
 }
 
 #{civi-page('contact')} {
